<?xml version="1.0"?>
<package>
  <name>multiresolution_voxelgrid_manager</name>
  <version>0.1.0</version>
  <description>ROS package to manage multiresolution voxel grids and update them dynamically from sensor data.</description>
  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sdf_tools</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sdf_tools</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
